# SDL2-Utilites

./: CMakeLists.txt  README.md  move_bin.sh
SDL2/: SDL_CLasses.h  SDL_Classes.cpp  SDL_Util.cpp  SDL_Util.h
file/: File_Util.cpp  File_Util.h
include/SDL2/: SDL_pixels.h  SDL_rect.h
